--- a/configs/hikey_l1i_defconfig
+++ b/configs/hikey_l1i_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Nov 22 17:13:48 2016
+# Thu Jul 12 15:57:35 2018
 #
 
 #
@@ -10,6 +10,7 @@
 # CONFIG_ARCH_ARM_V6 is not set
 # CONFIG_ARCH_ARM_V7A is not set
 CONFIG_ARCH_ARM_V8A=y
+CONFIG_HAVE_FPU=y
 CONFIG_KERNEL_MASTER=y
 CONFIG_WORD_SIZE=32
 
@@ -18,14 +19,17 @@ CONFIG_WORD_SIZE=32
 #
 # CONFIG_ARCH_X86 is not set
 CONFIG_ARCH_ARM=y
+# CONFIG_ARCH_RISCV is not set
+# CONFIG_ARCH_AARCH64 is not set
 CONFIG_ARCH_AARCH32=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
 # CONFIG_ARM_CORTEX_A8 is not set
 # CONFIG_ARM_CORTEX_A9 is not set
 # CONFIG_ARM_CORTEX_A15 is not set
-# CONFIG_ARM_CORTEX_A53 is not set
-CONFIG_ARM_CORTEX_A57=y
+CONFIG_ARM_CORTEX_A53=y
+# CONFIG_ARM_CORTEX_A57 is not set
+# CONFIG_PLAT_EXYNOS5 is not set
 # CONFIG_PLAT_EXYNOS54XX is not set
 # CONFIG_PLAT_IMX6 is not set
 # CONFIG_PLAT_IMX7 is not set
@@ -41,12 +45,12 @@ CONFIG_ARM_CORTEX_A57=y
 # CONFIG_PLAT_WANDQ is not set
 # CONFIG_PLAT_IMX7_SABRE is not set
 # CONFIG_PLAT_ZYNQ7000 is not set
+# CONFIG_PLAT_ZYNQMP is not set
 # CONFIG_PLAT_ALLWINNERA20 is not set
 # CONFIG_PLAT_TK1 is not set
 CONFIG_PLAT_HIKEY=y
 # CONFIG_PLAT_BCM2837 is not set
 CONFIG_EXPORT_PMU_USER=y
-CONFIG_ARCH_ARM_MPCORE=y
 # CONFIG_IPC_BUF_GLOBALS_FRAME is not set
 CONFIG_IPC_BUF_TPIDRURW=y
 
@@ -54,17 +58,20 @@ CONFIG_IPC_BUF_TPIDRURW=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=16
-CONFIG_TIMER_TICK_MS=2
+CONFIG_TIMER_TICK_MS=1
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
+CONFIG_RESET_CHUNK_BITS=8
 CONFIG_MAX_NUM_BOOTINFO_UNTYPED_CAPS=167
 CONFIG_FASTPATH=y
 CONFIG_NUM_DOMAINS=1
 CONFIG_DOMAIN_SCHEDULE=""
 CONFIG_NUM_PRIORITIES=256
 CONFIG_MAX_NUM_NODES=1
-CONFIG_CACHE_LN_SZ=64
+CONFIG_KERNEL_STACK_BITS=12
+CONFIG_AARCH32_FPU_ENABLE_CONTEXT_SWITCH=y
+CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 
 #
 # Build Options
@@ -81,19 +88,22 @@ CONFIG_USER_STACK_TRACE_LENGTH=16
 # CONFIG_OPTIMISATION_O1 is not set
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
-CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 # CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
-CONFIG_FLUSH_CACHE_ALL=y
-# CONFIG_FLUSH_TLB_ALL is not set
-# CONFIG_FLUSH_BTAC is not set
+# CONFIG_FLUSH_CORE_STATES is not set
 # CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
+CONFIG_ARM_HIKEY_OUTSTANDING_PREFETCHERS=5
+CONFIG_ARM_HIKEY_PREFETCHER_STRIDE=2
+CONFIG_ARM_HIKEY_PREFETCHER_NPFSTRM=2
+CONFIG_ARM_HIKEY_PREFETCHER_STBPFDIS=y
+# CONFIG_ARM_HIKEY_PREFETCHER_STBPFRS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
+# CONFIG_MULTI_KERNEL_IMAGES is not set
 
 #
 # Errata
@@ -107,43 +117,37 @@ CONFIG_NO_BENCHMARKS=y
 # Timing Channel Benchmarks
 #
 CONFIG_APP_SIDE_BENCH=y
-CONFIG_BENCH_CACHE_LINE_SIZE=64
 # CONFIG_BENCH_CACHE_FLUSH is not set
-# CONFIG_BENCH_CACHE_FLUSH_READ is not set
-CONFIG_BENCH_CACH_FLUSH_NONE=y
-# CONFIG_BENCH_CACHE_FLUSH_L1D is not set
-# CONFIG_BENCH_CACHE_FLUSH_L1I is not set
-# CONFIG_BENCH_CACHE_FLUSH_ALL is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
-# CONFIG_BENCH_ICACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
+CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_L1D is not set
 CONFIG_BENCH_COVERT_L1I=y
-# CONFIG_BENCH_COVERT_L2 is not set
 # CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
+# CONFIG_BENCH_COVERT_BP is not set
+# CONFIG_BENCH_COVERT_TIMER is not set
 CONFIG_BENCH_DATA_POINTS=1024
-# CONFIG_BENCH_DATA_SEQUENTIAL is not set
+# CONFIG_BENCH_COVERT_L1I_REWRITE is not set
+# CONFIG_BENCH_COVERT_L1I_PROB_VADDR is not set
 # CONFIG_MASTIK_ATTACK is not set
 
 #
 # Manager task for benchmarking tests
 #
 CONFIG_APP_MANAGER=y
+CONFIG_BENCH_UNTYPE_COUNT=40
+CONFIG_BENCH_UNTYPE_SIZEBITS=14
+# CONFIG_MANAGER_MITIGATION is not set
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
+# CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-# CONFIG_MANAGER_COVERT_MITIGATION is not set
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
-# CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
@@ -154,7 +158,9 @@ CONFIG_MANAGER_COVERT_BENCH=y
 # libsel4
 #
 CONFIG_LIB_SEL4=y
+# CONFIG_LIB_SEL4_DEFAULT_FUNCTION_ATTRIBUTES is not set
 CONFIG_LIB_SEL4_INLINE_INVOCATIONS=y
+# CONFIG_LIB_SEL4_PUBLIC_SYMBOLS is not set
 # CONFIG_LIB_SEL4_STUBS_USE_IPC_BUFFER_ONLY is not set
 CONFIG_HAVE_LIB_SEL4=y
 CONFIG_LIB_MUSL_C=y
@@ -198,6 +204,7 @@ CONFIG_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_HAVE_LIB_SEL4_SIMPLE_DEFAULT=y
 CONFIG_LIB_UTILS=y
 # CONFIG_LIB_UTILS_NO_STATIC_ASSERT is not set
+CONFIG_LIB_UTILS_DEFAULT_ZF_LOG_LEVEL=5
 CONFIG_HAVE_LIB_UTILS=y
 CONFIG_LIB_PLATSUPPORT=y
 CONFIG_HAVE_LIB_PLATSUPPORT=y
@@ -239,4 +246,5 @@ CONFIG_USER_OPTIMISATION_O2=y
 # CONFIG_WHOLE_PROGRAM_OPTIMISATIONS_USER is not set
 # CONFIG_WHOLE_PROGRAM_OPTIMISATIONS_KERNEL is not set
 CONFIG_USER_DEBUG_BUILD=y
+# CONFIG_USER_LINKER_GC_SECTIONS is not set
 # CONFIG_BUILDSYS_CPP_SEPARATE is not set
