--- a/configs/sabre_l1d_colour_defconfig
+++ b/configs/sabre_l1d_colour_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Jul 16 11:28:43 2018
+# Thu Jul 19 15:42:45 2018
 #
 
 #
@@ -58,7 +58,7 @@ CONFIG_IPC_BUF_TPIDRURW=y
 #
 # seL4 System Parameters
 #
-CONFIG_ROOT_CNODE_SIZE_BITS=19
+CONFIG_ROOT_CNODE_SIZE_BITS=16
 CONFIG_TIMER_TICK_MS=1
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
@@ -99,10 +99,9 @@ CONFIG_NO_BENCHMARKS=y
 CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_KERNEL_SWITCH_FLUSH=y
 CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
-CONFIG_KERNEL_HOLD_TICK_LENGTH=810
+CONFIG_KERNEL_HOLD_TICK_LENGTH=850
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
-# CONFIG_INT_TASK_PRIORITY is not set
-# CONFIG_KERNEL_INT_MASK is not set
+CONFIG_KERNEL_INT_MASK=y
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
@@ -122,17 +121,16 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
 CONFIG_BENCH_COVERT=y
-# CONFIG_BENCH_COVERT_L1D is not set
-CONFIG_BENCH_COVERT_L1I=y
+CONFIG_BENCH_COVERT_L1D=y
+# CONFIG_BENCH_COVERT_L1I is not set
 # CONFIG_BENCH_COVERT_LLC is not set
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
-CONFIG_BENCH_DATA_POINTS=1024
-# CONFIG_BENCH_COVERT_L1I_REWRITE is not set
-# CONFIG_BENCH_COVERT_L1I_PROB_VADDR is not set
+CONFIG_BENCH_DATA_POINTS=1024000
+# CONFIG_BENCH_COVERT_L1D_WRITE is not set
 # CONFIG_MASTIK_ATTACK is not set
 
 #
@@ -167,7 +165,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=10485760
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
@@ -242,7 +240,7 @@ CONFIG_KERNEL_CFLAGS=""
 CONFIG_KERNEL_EXTRA_CPPFLAGS=""
 CONFIG_USER_COMPILER=""
 # CONFIG_USER_DEBUG_INFO is not set
-CONFIG_USER_EXTRA_CFLAGS="-D_XOPEN_SOURCE=700 -Wl,-z,max-page-size=0x1000"
+CONFIG_USER_EXTRA_CFLAGS="-D_XOPEN_SOURCE=700 -Wl,-z,max-page-size=0x1000 -DZF_LOG_DEF_LEVEL=ZF_LOG_DEBUG"
 CONFIG_USER_CFLAGS=""
 CONFIG_BUILDSYS_USE_CCACHE=y
 # CONFIG_USER_OPTIMISATION_Os is not set
