--- a/configs/sabre_l2_defconfig
+++ b/configs/sabre_l2_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Sun May 13 15:55:47 2018
+# Thu Jul 19 15:39:27 2018
 #
 
 #
@@ -19,6 +19,7 @@ CONFIG_WORD_SIZE=32
 #
 # CONFIG_ARCH_X86 is not set
 CONFIG_ARCH_ARM=y
+# CONFIG_ARCH_RISCV is not set
 # CONFIG_ARCH_AARCH64 is not set
 CONFIG_ARCH_AARCH32=y
 # CONFIG_ARM1136JF_S is not set
@@ -49,7 +50,7 @@ CONFIG_PLAT_SABRE=y
 # CONFIG_PLAT_TK1 is not set
 # CONFIG_PLAT_HIKEY is not set
 # CONFIG_PLAT_BCM2837 is not set
-# CONFIG_ENABLE_A9_PREFETCHER is not set
+CONFIG_ENABLE_A9_PREFETCHER=y
 CONFIG_EXPORT_PMU_USER=y
 # CONFIG_IPC_BUF_GLOBALS_FRAME is not set
 CONFIG_IPC_BUF_TPIDRURW=y
@@ -58,7 +59,7 @@ CONFIG_IPC_BUF_TPIDRURW=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=16
-CONFIG_TIMER_TICK_MS=1
+CONFIG_TIMER_TICK_MS=4
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
@@ -88,20 +89,14 @@ CONFIG_OPTIMISATION_O2=y
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 # CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
-# CONFIG_FLUSH_CACHE_ALL is not set
-# CONFIG_FLUSH_TLB_ALL is not set
-# CONFIG_FLUSH_BTAC is not set
+# CONFIG_FLUSH_CORE_STATES is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
-CONFIG_MULTI_KERNEL_IMAGES=y
-CONFIG_KERNEL_SWITCH_FLUSH=y
-CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
-CONFIG_KERNEL_HOLD_TICK_LENGTH=850
-CONFIG_LOAD_KERNEL_SHARED_DATA=y
+# CONFIG_MULTI_KERNEL_IMAGES is not set
 
 #
 # Errata
@@ -119,19 +114,16 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_DCACHE_ATTACK is not set
 # CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-CONFIG_BENCH_COVERT_SINGLE=y
-CONFIG_BENCH_COVERT_L1D=y
+CONFIG_BENCH_COVERT=y
+# CONFIG_BENCH_COVERT_L1D is not set
 # CONFIG_BENCH_COVERT_L1I is not set
-# CONFIG_BENCH_COVERT_L2 is not set
-# CONFIG_BENCH_COVERT_LLC is not set
+CONFIG_BENCH_COVERT_LLC=y
 # CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
-# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
 # CONFIG_BENCH_COVERT_TLB is not set
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 # CONFIG_BENCH_COVERT_TIMER is not set
-CONFIG_BENCH_DATA_POINTS=1024
-# CONFIG_BENCH_COVERT_L1D_WRITE is not set
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
 
 #
@@ -140,16 +132,13 @@ CONFIG_BENCH_DATA_POINTS=1024
 CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
-CONFIG_MANAGER_MITIGATION=y
+# CONFIG_MANAGER_MITIGATION is not set
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
-# CONFIG_COVERT_TROJAN_SENSITIVE is not set
-# CONFIG_COVERT_SPY_SENSITIVE is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
-# CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
@@ -169,7 +158,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=10485760
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
