--- a/configs/sabre_splash_ocean_kernel_colour_defconfig
+++ b/configs/sabre_splash_ocean_kernel_colour_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Sep  3 15:36:08 2018
+# Fri Sep  7 14:27:51 2018
 #
 
 #
@@ -102,6 +102,7 @@ CONFIG_MULTI_KERNEL_IMAGES=y
 # CONFIG_LOAD_KERNEL_SHARED_DATA is not set
 # CONFIG_KERNEL_INT_MASK is not set
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
+CONFIG_ENABLE_GLOBAL_TIMER=y
 
 #
 # Errata
@@ -121,6 +122,7 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_PMU_COUNTER is not set
 # CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
+CONFIG_BENCH_SPLASH_MORECORE=y
 CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_FFT is not set
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
@@ -142,6 +144,7 @@ CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
 CONFIG_MANAGER_MITIGATION=y
 # CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 # CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
@@ -168,7 +171,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=15728640
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=2097152
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
@@ -187,7 +190,7 @@ CONFIG_HAVE_LIB_CPIO=y
 CONFIG_LIB_ELF=y
 CONFIG_HAVE_LIB_ELF=y
 CONFIG_LIB_SEL4_UTILS=y
-CONFIG_SEL4UTILS_STACK_SIZE=65536
+CONFIG_SEL4UTILS_STACK_SIZE=1048576
 CONFIG_SEL4UTILS_CSPACE_SIZE_BITS=8
 # CONFIG_SEL4UTILS_PROFILE is not set
 CONFIG_HAVE_LIB_SEL4_UTILS=y
